[tool.poetry]
name = "core"
version = "0.1.0"
description = "guide on blockchain storage and retrieval using Hedera blockchain and Django"
authors = ["UJ Blockchain"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
django-axes = "6.4.0"
pillow = "^10.2.0"
shortuuid = "1.0.13"
django-split-settings = "1.3.0"
hedera-sdk-py = "^2.29.0"
web3 = "^6.15.1"
django = "~4.2.11"
dotmap = "^1.3.30"
django-jazzmin = "^2.6.1"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
